ux: decorator colors

--- a/src/Resources/Themes.axaml
+++ b/src/Resources/Themes.axaml
@@ -13,8 +13,8 @@
       <Color x:Key="Color.Contents">#FFFAFAFA</Color>
       <Color x:Key="Color.Badge">#FFB0CEE8</Color>
       <Color x:Key="Color.BadgeFG">#FF1F1F1F</Color>
-      <Color x:Key="Color.DecoratorIconBG">DarkGray</Color>
-      <Color x:Key="Color.DecoratorIcon">#0C0E21</Color>
+      <Color x:Key="Color.DecoratorIconBG">#A0A0A0</Color>
+      <Color x:Key="Color.DecoratorIcon">White</Color>
       <Color x:Key="Color.DecoratorBranch">#008585</Color>
       <Color x:Key="Color.DecoratorHead">#0C0E21</Color>
       <Color x:Key="Color.DecoratorTag">#79855f</Color>
@@ -52,7 +52,7 @@
       <Color x:Key="Color.DecoratorIcon">#FFF8F8F8</Color>
       <Color x:Key="Color.DecoratorBranch">#FFFFB835</Color>
       <Color x:Key="Color.DecoratorHead">#f4f1de</Color>
-      <Color x:Key="Color.DecoratorTag">#FF02C302</Color>
+      <Color x:Key="Color.DecoratorTag">#84c88a</Color>
       <Color x:Key="Color.DecoratorFG">Black</Color>
       <Color x:Key="Color.Conflict">#FFFAFAD2</Color>
       <Color x:Key="Color.ConflictForeground">#FF252525</Color>
