--- a/src/Views/DiffView.axaml
+++ b/src/Views/DiffView.axaml
@@ -47,7 +47,7 @@
                     Command="{Binding DecrUnified}" 
                     IsVisible="{Binding IsTextDiff}" 
                     ToolTip.Tip="{DynamicResource Text.Diff.VisualLines.Decr}" 
-                    IsEnabled="{Binding Source={x:Static vm:Preference.Instance}, Path=DiffViewVisualLineNumbers, Converter={x:Static c:IntConverters.IsGreaterThanFour}}">
+                    IsEnabled="{Binding UnifiedLines, Converter={x:Static c:IntConverters.IsGreaterThanFour}}">
               <Path Width="12" Height="12" Stretch="Uniform" Margin="0,6,0,0" Data="{StaticResource Icons.Lines.Decr}"/>
             </Button>
 
