--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -1,5 +1,6 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:s="using:SourceGit"
         xmlns:vm="using:SourceGit.ViewModels"
         xmlns:c="using:SourceGit.Converters"
         xmlns:ae="using:AvaloniaEdit"
@@ -300,6 +301,14 @@
                     Command="{Binding $parent[SelectableTextBlock].Copy}"
                     IsEnabled="{Binding $parent[SelectableTextBlock].CanCopy}"
                     InputGesture="{x:Static TextBox.CopyGesture}">
+            <MenuItem.Icon>
+              <Path Width="11" Height="11" Data="{StaticResource Icons.Copy}" VerticalAlignment="Center"/>
+            </MenuItem.Icon>
+          </MenuItem>
+          
+          <MenuItem Header="{DynamicResource Text.CopyAllText}"
+                    Command="{x:Static s:App.CopyTextCommand}"
+                    CommandParameter="{Binding $parent[SelectableTextBlock]}">
             <MenuItem.Icon>
               <Path Width="11" Height="11" Data="{StaticResource Icons.Copy}" VerticalAlignment="Center"/>
             </MenuItem.Icon>
