ux: force using arrow cursor when hover a menu item

--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -739,6 +739,7 @@
     <Setter Property="Height" Value="28"/>
     <Setter Property="Background" Value="Transparent" />
     <Setter Property="Foreground" Value="{DynamicResource Brush.FG1}" />
+    <Setter Property="Cursor" Value="Arrow"/>
 
     <Setter Property="Template">
       <ControlTemplate>
