--- a/src/Views/Squash.axaml
+++ b/src/Views/Squash.axaml
@@ -13,17 +13,19 @@
                Classes="bold"
                Text="{DynamicResource Text.Squash}"/>
 
-    <Grid Margin="0,18,0,0" ColumnDefinitions="Auto,Auto,*">
-      <Path Grid.Column="0"
-            Margin="2,6,8,0"
+    <Grid Margin="0,18,0,0" ColumnDefinitions="Auto,Auto,Auto,*">
+      <TextBlock Grid.Column="0"
+                 Text="{DynamicResource Text.Squash.Into}"/>
+      <Path Grid.Column="1"
+            Margin="8,6,8,0"
             Width="14" Height="14"
             Fill="{DynamicResource Brush.FG1}"
             Data="{StaticResource Icons.Commit}"/>
-      <TextBlock Grid.Column="1"
+      <TextBlock Grid.Column="2"
                  Classes="primary"
                  Text="{Binding Target.SHA, Converter={x:Static c:StringConverters.ToShortSHA}}"
                  Foreground="DarkOrange"/>
-      <TextBlock Grid.Column="2" Margin="8,0,0,0" Text="{Binding Target.Subject}" TextTrimming="CharacterEllipsis"/>
+      <TextBlock Grid.Column="3" Margin="8,0,0,0" Text="{Binding Target.Subject}" TextTrimming="CharacterEllipsis"/>
     </Grid>
 
     <v:CommitMessageTextBox Height="120" Margin="0,4,0,0" Text="{Binding Message, Mode=TwoWay}"/>
