ux: force enable horizontal stretch for commit message (#400)

--- a/src/Views/CommitBaseInfo.axaml
+++ b/src/Views/CommitBaseInfo.axaml
@@ -117,6 +117,7 @@
                                     Classes="primary" 
                                     Message="{Binding #ThisControl.Message}"
                                     IssueTrackerRules="{Binding #ThisControl.IssueTrackerRules}"
+                                    HorizontalAlignment="Stretch"
                                     TextWrapping="Wrap"/>
         </Grid>
       </StackPanel>
